prusti/tests/pass/parse/calls.stderr
Verification of 4 items...
error: [Prusti: verification error] statement might panic
  --> $DIR/calls.rs:32:5
   |
32 |     assert!(z == 5);
   |     ^^^^^^^^^^^^^^^^
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

Verification failed
error: aborting due to previous error

